--- a/style.css
+++ b/style.css
@@ -91,3 +91,44 @@ body{
     margin-top: 10px;
     display: none;
 }
+
+/* media query for mobile device */
+
+@media screen and (max-width: 320px){
+    .search input {
+        padding: 8px 10px;
+        margin-right: 10px;
+    }
+    .search button{
+        height:30px
+    }
+    .details{
+        padding: 0 0;
+        margin-top: 30px;
+    }
+    .humidity, .wind{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 400px){
+    .search input {
+        padding: 8px 10px;
+        margin-right: 10px;
+    }
+}
+
+@media screen and (max-width: 375px){
+    .search input {
+        padding: 8px 10px;
+        margin-right: 10px;
+    }
+    .search button{
+        width: 30px;
+        height:30px;
+       
+    }
+    .details{
+        padding: 0 0;
+        margin-top: 30px;
+    }
+}
